[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SSHTunnel"
version = "1.0.0"
description = "Maintain a reverse SSH tunnel connection"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
authors = [
    {name = "Pat Welch", email = "pat@mousebrains.com"}
]
keywords = ["ssh", "tunnel", "reverse-tunnel", "systemd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
]
dependencies = [
    "PyYAML>=6.0",
    "TPWUtils @ git+https://github.com/mousebrains/TPWUtils.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/mousebrains/SSHTunnel"
Repository = "https://github.com/mousebrains/SSHTunnel"
Issues = "https://github.com/mousebrains/SSHTunnel/issues"

[project.scripts]
ssh-tunnel = "tunnel:main"

[tool.setuptools]
py-modules = ["tunnel", "install"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
